baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__01_lexer__negative.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Word "type"
Word "Alias"
Equals "="
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Class "class"
Word "Holder"
LBrace "{"
Word "cb"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Word "opt_cb"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Question "?"
RBrace "}"
Function "function"
Word "let_annotation"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Colon ":"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Equals "="
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
RBrace "}"
Semicolon ";"
Word "f"
LParen "("
IntegerLiteral "1"
RParen ")"
RBrace "}"
Function "function"
Word "nested_param"
LParen "("
Word "cb"
Colon ":"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "cb"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "value"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "optional_param"
LParen "("
Word "cb"
Colon ":"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Question "?"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "1"
RBrace "}"
Function "function"
Word "list_param"
LParen "("
Word "cbs"
Colon ":"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
LBracket "["
RBracket "]"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "0"
RBrace "}"
Function "function"
Word "returns_fn"
LParen "("
RParen ")"
Arrow "->"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "value"
RBrace "}"
RBrace "}"
Function "function"
Word "lambda_param"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "apply"
Equals "="
LParen "("
Word "f"
Colon ":"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Comma ","
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
Word "x"
RParen ")"
RBrace "}"
Semicolon ";"
Word "apply"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "value"
RBrace "}"
Comma ","
IntegerLiteral "1"
RParen ")"
RBrace "}"
