baml_language/crates/baml_tests/snapshots/diagnostic_errors/function_type_missing_throws/baml_tests__diagnostic_errors__function_type_missing_throws__01_lexer__positive.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Word "type"
Word "ExplicitAlias"
Equals "="
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
Word "type"
Word "OpenAlias"
Equals "="
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "unknown"
Class "class"
Word "Callbacks"
LBrace "{"
Word "on_done"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
Word "on_skip"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
RParen ")"
Question "?"
RBrace "}"
Function "function"
Word "immediate_callback"
LParen "("
Word "cb"
Colon ":"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "cb"
LParen "("
IntegerLiteral "1"
RParen ")"
RBrace "}"
Function "function"
Word "lambda_explicit_callback"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "apply"
Equals "="
LParen "("
Word "f"
Colon ":"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
Comma ","
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "f"
LParen "("
Word "x"
RParen ")"
RBrace "}"
Semicolon ";"
Word "apply"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "value"
RBrace "}"
Comma ","
IntegerLiteral "1"
RParen ")"
RBrace "}"
Function "function"
Word "explicit_nested"
LParen "("
Word "cb"
Colon ":"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
RParen ")"
Arrow "->"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "cb"
LParen "("
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "value"
RBrace "}"
RParen ")"
RBrace "}"
Function "function"
Word "explicit_let"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "f"
Colon ":"
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
Equals "="
LParen "("
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
RBrace "}"
Semicolon ";"
Word "f"
LParen "("
IntegerLiteral "1"
RParen ")"
RBrace "}"
Function "function"
Word "explicit_return"
LParen "("
RParen ")"
Arrow "->"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
Throws "throws"
Word "never"
LBrace "{"
LParen "("
Word "value"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "value"
RBrace "}"
RBrace "}"
